Page execution history and dependants
Execution history and dependant lookups now have bounded limit/offset variants in the public query API and store SPI. The old convenience methods still return the first page, while chain and cascade paths walk all pages so internal behavior does not silently stop at 100 rows.

The store TCK now covers paged history and dependant reads across MySQL, PostgreSQL, MongoDB, and the in-memory test store.

Signed-off-by: Jonathan Putney <jonathan@putney.io>